--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,20 +1,20 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">Recipe Books</a>
+      <a [routerLink]="['/']" class="navbar-brand">Recipe Books</a>
     </div>
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="#" (click)="onSelect('recipe')">Recipes</a></li>
-        <li><a href="#" (click)="onSelect('shopping-list')">Shoping List</a></li>
+        <li routerLinkActive="active"><a style="cursor: pointer" [routerLink]="['/recipes']">Recipes</a></li>
+        <li routerLinkActive="active"><a style="cursor: pointer" [routerLink]="['/shopping-list']">Shoping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" appDropdown>
-          <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
+          <a style="cursor: pointer;" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Save data</a></li>
-            <li><a href="#">Fetch data</a></li>
+            <li><a style="cursor: pointer;">Save data</a></li>
+            <li><a style="cursor: pointer;">Fetch data</a></li>
           </ul>
         </li>
       </ul>
